[gd_scene load_steps=18 format=2]

[ext_resource path="res://Proto/Mobs/Path2/Main.gd" type="Script" id=1]
[ext_resource path="res://Proto/Mobs/Path2/NPC0.gd" type="Script" id=2]

[sub_resource type="Environment" id=9]
background_mode = 1
background_color = Color( 0.0431373, 0.12549, 0.231373, 1 )
ambient_light_color = Color( 0.321569, 0.458824, 0.780392, 1 )
fog_enabled = true
fog_depth_begin = 40.0
fog_depth_end = 300.0
fog_depth_curve = 0.574349
fog_transmit_enabled = true
glow_enabled = true
glow_bloom = 0.32
glow_blend_mode = 0

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 1, 0.317647, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 100, 2, 100 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 50, 1, 50 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
albedo_color = Color( 0.909804, 0.211765, 0.211765, 0.662745 )

[sub_resource type="CubeMesh" id=11]
material = SubResource( 10 )
size = Vector3( 4, 4, 4 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 2, 2, 2 )

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
albedo_color = Color( 0.34902, 0.419608, 1, 0.662745 )

[sub_resource type="CubeMesh" id=13]
material = SubResource( 12 )
size = Vector3( 4, 4, 4 )

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
albedo_color = Color( 0.34902, 0.862745, 1, 0.662745 )

[sub_resource type="CubeMesh" id=15]
material = SubResource( 14 )
size = Vector3( 4, 4, 4 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
albedo_color = Color( 0.34902, 1, 0.356863, 0.662745 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 16 )
size = Vector3( 4, 4, 4 )

[sub_resource type="CylinderMesh" id=7]
top_radius = 0.5
bottom_radius = 1.5
radial_segments = 5
rings = 0

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.231373, 0.521569, 0.898039, 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 7.57103e-08, -4.37114e-08, 0, 0.5, 0.866025, 8.74228e-08, 0.866025, -0.5, 0, 40, -35 )
environment = SubResource( 9 )
far = 200.0

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 21.9594, 0 )
light_color = Color( 0.964706, 0.760784, 0.282353, 1 )
spot_range = 30.0

[node name="SpotLight2" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, -28.8066, 21.9594, 0 )
light_color = Color( 0.964706, 0.760784, 0.282353, 1 )
spot_range = 30.0

[node name="SpotLight3" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, -0.246111, 21.9594, 28.8561 )
light_color = Color( 0.964706, 0.760784, 0.282353, 1 )
spot_range = 30.0

[node name="SpotLight4" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 27.427, 21.9594, -0.377012 )
light_color = Color( 0.964706, 0.760784, 0.282353, 1 )
spot_range = 30.0

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 3 )

[node name="Sensor0" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.0876274 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Sensor0"]
mesh = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Sensor0"]
shape = SubResource( 6 )

[node name="Sensor1" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 1, -0.0876274 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Sensor1"]
mesh = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Sensor1"]
shape = SubResource( 6 )

[node name="Sensor2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 29.9124 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Sensor2"]
mesh = SubResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="Sensor2"]
shape = SubResource( 6 )

[node name="Sensor3" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 1, -0.0876274 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Sensor3"]
mesh = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Sensor3"]
shape = SubResource( 6 )

[node name="NPC0" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -32.024 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="NPC0"]
mesh = SubResource( 7 )
material/0 = SubResource( 8 )
